[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "crondst"
version = "1.0.3"
description = "Returns when the next job triggers given a cron expression. Supports DST."
authors = [
    {name = "Calvin Law"}
]
maintainers = [
    {name = "Calvin Law"}
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["cron", "crontab", "schedule"]

[project.urls]
Homepage = "https://github.com/lawcal/crondst"

[tool.setuptools]
packages = ["crondst"]

[tool.pytest.ini_options]
pythonpath = ["."]
